--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "express": "^4.16.2",
     "firebase": "^4.8.0",
     "geolocation": "^0.2.0",
     "ionic-angular": "3.9.2",
