Cordova browser config

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "NLG Tech App",
+  "short_name": "NLG Tech App",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
