--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-add-swift-support": "^1.7.1",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-calendar": "^5.0.0",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^1.1.7",
@@ -45,6 +46,7 @@
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic": "^2.0.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.8.0",
@@ -57,7 +59,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
-    "phonegap-plugin-push": "^2.1.2",
+    "phonegap-plugin-push": "^2.1.3",
     "promise-polyfill": "^6.1.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
